--- a/Pokegame/pokegame.html
+++ b/Pokegame/pokegame.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Info</title>
+    <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
 </head>
-<body>
-    <h1>Pokémon Info</h1>
-    <div>
-        <label for="pokemonInput">Enter Pokémon Name:</label>
-        <input type="text" id="pokemonInput" placeholder="Enter Pokémon name">
-        <button id="searchButton">Search</button>
-    </div>
-    <div>
-        <p id="pokemonOutput">Pokedex Entry: #25</p>
-        <p id="pokemonType"> Type: electric</p>
-        <img id="pokemonImage" alt="Pokémon Image" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
-    </div>
-    <p>This uses the pokeapi!</p> 
-    <a href="https://pokeapi.co"> check them out!</a>
 
-    
+<body>
+
+    <div id="search">
+        <h1 id="Title">Pokémon Info</h1>
+        <div>
+            <label for="pokemonInput">Enter Pokémon Name:</label>
+            <input type="text" id="pokemonInput" placeholder="Enter Pokémon name">
+            <button id="searchButton">Search</button>
+        </div>
+        <div>
+            <p id="pokemonOutput">Pokedex Entry: #25</p>
+            <p id="pokemonType"> Type: electric</p>
+            <img id="pokemonImage" alt="Pokémon Image"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
+            <button id="shinyButton">Shiny</button>
+        </div>
+        <p>This uses the pokeapi!</p>
+        <a href="https://pokeapi.co"> check them out!</a>
+    </div>
+
+
 </body>
 <script src="script.js"></script>
+
 </html>
