--- a/Pokegame/pokegame.html
+++ b/Pokegame/pokegame.html
@@ -5,28 +5,34 @@
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Info</title>
+    <title>My Pokémon Team</title>
     <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
 </head>
 
 <body>
 
     <div id="search">
-        <h1 id="Title">Pokémon Info</h1>
+
+        <h1 id="Title">My Pokémon Team</h1>
         <div>
             <label for="pokemonInput">Enter Pokémon Name:</label>
             <input type="text" id="pokemonInput" placeholder="Enter Pokémon name">
             <button id="searchButton">Search</button>
         </div>
         <div>
-            <p id="pokemonOutput">Pokedex Entry: #25</p>
-            <p id="pokemonType"> Type: electric</p>
-            <img id="pokemonImage" alt="Pokémon Image"
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
+            <p id="pokemonOutput"></p>
+            <p id="pokemonType"></p>
+            <img id="pokemonImage" alt="Pokémon Image" src="">
             <button id="shinyButton">Shiny</button>
+            <button id="addButton">Add to Team</button>
         </div>
         <p>This uses the pokeapi!</p>
         <a href="https://pokeapi.co"> check them out!</a>
+    </div>
+
+    <div id="Team">
+
+
     </div>
 
 
