added surprise button, clear button, changed styling

--- a/Pokegame/pokegame.html
+++ b/Pokegame/pokegame.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <div id="search">
 
         <h1 id="Title">My Pokémon Team</h1>
@@ -23,19 +22,18 @@
             <p id="pokemonOutput"></p>
             <p id="pokemonType"></p>
             <img id="pokemonImage" alt="Pokémon Image" src="">
-            <button id="shinyButton">Shiny</button>
-            <button id="addButton">Add to Team</button>
         </div>
+
+        <button id="shinyButton">Shiny</button>
+        <button id="addButton">Add to Team</button>
+        <button id="surpriseButton">Surprise me!</button>
+        <button id="clearButton">Clear Team</button>
         <p>This uses the pokeapi!</p>
         <a href="https://pokeapi.co"> check them out!</a>
-    </div>
 
+    </div>
     <div id="Team">
-
-
     </div>
-
-
 </body>
 <script src="script.js"></script>
 
