fixed name issue in js and grammatical error in index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="welcome">
             <h2> Welcome! 👋</h2>
             <img src="img/XavierMuise.jpg" alt="Picture of me" style="float: left;">
-            <p> Im Xavier, a 19 year old from Nova Scotia currently pursuing a degree in computer science at Dalhousie
+            <p> I'm Xavier, a 19 year old from Nova Scotia currently pursuing a degree in computer science at Dalhousie
                 University. </p>
         </div>
 
