added back button and fixed random

--- a/Pokegame/pokegame.html
+++ b/Pokegame/pokegame.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="search">
-
+        <a href="../index.html">Back</a>
         <h1 id="Title">My Pokémon Team</h1>
         <div>
             <label for="pokemonInput">Enter Pokémon Name:</label>
