--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <meta charset="UTF-8">
@@ -74,6 +73,12 @@
             <img src="img/Pikachu.png" alt="Pikachu">
         </div>
 
+        <div class="game-box">
+            <h2> Tic-Tac-Toe </h2>
+            <p>2 Player Tic-Tac-Toe game </p>
+            <a href="TicTacToe/TTT.html">click here!</a>
+            <img src="img/TTT.png" alt="TicTacToe">
+        </div>
 
 
     </div>
