added 20 number game

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             <img src="img/TTT.png" alt="TicTacToe">
         </div>
 
-
+        <div class="game-box">
+            <h2> 20 Number Challenge </h2>
+            <p> Try to sort 20 random numbers correctly </p>
+            <a href="20NumberGame/NG.html">click here!</a>
+            <img src="img/TTT.png" alt="TicTacToe">
+        </div>
     </div>
 
     <footer>
