--- a/20NumberGame/NG.html
+++ b/20NumberGame/NG.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Back</a>
     <div class="container">
         <h1>20 Number Challenge</h1>
         <div class="grid">
