--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
                 <ion-icon name="call-outline" id="icon"></ion-icon>
                 <a href="tel:902-778-1290">(902)778-1290</a>
+
+                <ion-icon name="document-text-outline" id="icon"></ion-icon>
+                <a href="img/Xavier Muise-Fasci 2024 Resume.pdf"> Resume </a>
                 
                 
             </div>
@@ -46,19 +49,9 @@
     </header>
 
     <main id="Main">
-        <div id="spotify">
-            <p>Check out my spotify playlist!</p>
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/playlist/2KWsm1MAmHfzamH2hcmBZp?utm_source=generator&theme=0"
-                width="100%" height="352" frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
-        </div>
-
         <div id="welcome">
             <h2> Welcome! 👋</h2>
-            <img src="img/XavierMuise.jpg" alt="Picture of me" style="float: left;">
-            <p> I'm Xavier, a 19 year old from Nova Scotia currently pursuing a degree in computer science at Dalhousie
+            <p> I'm Xavier, a 20 year old from Nova Scotia currently pursuing a degree in computer science at Dalhousie
                 University. </p>
         </div>
 
@@ -68,14 +61,14 @@
     <div id="Games">
         <div class="game-box">
             <h2> Pokémon minigame </h2>
-            <p>Website that uses the pokeapi to generate sprites of any pokemon you like.</p>
+            <p>Build your own Team!</p>
             <a href="Pokegame/pokegame.html">click here!</a>
             <img src="img/Pikachu.png" alt="Pikachu">
         </div>
 
         <div class="game-box">
             <h2> Tic-Tac-Toe </h2>
-            <p>2 Player Tic-Tac-Toe game </p>
+            <p>2 Player Tic-Tac-Toe</p>
             <a href="TicTacToe/TTT.html">click here!</a>
             <img src="img/TTT.png" alt="TicTacToe">
         </div>
@@ -84,7 +77,7 @@
             <h2> 20 Number Challenge </h2>
             <p> Try to sort 20 random numbers correctly </p>
             <a href="20NumberGame/NG.html">click here!</a>
-            <img src="img/TTT.png" alt="TicTacToe">
+            <img src="" alt="TicTacToe">
         </div>
     </div>
 
