--- a/20NumberGame/NG.html
+++ b/20NumberGame/NG.html
@@ -13,26 +13,26 @@
     <div class="container">
         <h1>20 Number Challenge</h1>
         <div class="grid">
-            <p class="number" id="1" onclick="placeNum(1)">1.</p>
-            <p class="number" id="2" onclick="placeNum(2)">2.</p>
-            <p class="number" id="3" onclick="placeNum(3)">3.</p>
-            <p class="number" id="4" onclick="placeNum(4)">4.</p>
-            <p class="number" id="5" onclick="placeNum(5)">5.</p>
-            <p class="number" id="6" onclick="placeNum(6)">6.</p>
-            <p class="number" id="7" onclick="placeNum(7)">7.</p>
-            <p class="number" id="8" onclick="placeNum(8)">8.</p>
-            <p class="number" id="9" onclick="placeNum(9)">9.</p>
-            <p class="number" id="10" onclick="placeNum(10)">10.</p>
-            <p class="number" id="11" onclick="placeNum(11)">11.</p>
-            <p class="number" id="12" onclick="placeNum(12)">12.</p>
-            <p class="number" id="13" onclick="placeNum(13)">13.</p>
-            <p class="number" id="14" onclick="placeNum(14)">14.</p>
-            <p class="number" id="15" onclick="placeNum(15)">15.</p>
-            <p class="number" id="16" onclick="placeNum(16)">16.</p>
-            <p class="number" id="17" onclick="placeNum(17)">17.</p>
-            <p class="number" id="18" onclick="placeNum(18)">18.</p>
-            <p class="number" id="19" onclick="placeNum(19)">19.</p>
-            <p class="number" id="20" onclick="placeNum(20)">20.</p>
+            <p class="number" id="1" onclick="placeNum(1)">1:</p>
+            <p class="number" id="2" onclick="placeNum(2)">2:</p>
+            <p class="number" id="3" onclick="placeNum(3)">3:</p>
+            <p class="number" id="4" onclick="placeNum(4)">4:</p>
+            <p class="number" id="5" onclick="placeNum(5)">5:</p>
+            <p class="number" id="6" onclick="placeNum(6)">6:</p>
+            <p class="number" id="7" onclick="placeNum(7)">7:</p>
+            <p class="number" id="8" onclick="placeNum(8)">8:</p>
+            <p class="number" id="9" onclick="placeNum(9)">9:</p>
+            <p class="number" id="10" onclick="placeNum(10)">10:</p>
+            <p class="number" id="11" onclick="placeNum(11)">11:</p>
+            <p class="number" id="12" onclick="placeNum(12)">12:</p>
+            <p class="number" id="13" onclick="placeNum(13)">13:</p>
+            <p class="number" id="14" onclick="placeNum(14)">14:</p>
+            <p class="number" id="15" onclick="placeNum(15)">15:</p>
+            <p class="number" id="16" onclick="placeNum(16)">16:</p>
+            <p class="number" id="17" onclick="placeNum(17)">17:</p>
+            <p class="number" id="18" onclick="placeNum(18)">18:</p>
+            <p class="number" id="19" onclick="placeNum(19)">19:</p>
+            <p class="number" id="20" onclick="placeNum(20)">20:</p>
         </div>
     </div>
     <div class="container">
