bball goat game

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
             <a href="20NumberGame/NG.html">click here!</a>
             <img src="" alt="TicTacToe">
         </div>
+
+        <div class="game-box">
+            <h2>Become The Goat</h2>
+            <p> Pick attributes from basketball players to build the Goat</p>
+            <a href="BecomeGoat/Goat.html">click here!</a>
+            <img src="img/LebronJames.png" alt="Goat">
+        </div>
     </div>
 
     <footer>
