fixed a few bugs in bball game and added some css

--- a/BecomeGoat/Goat.html
+++ b/BecomeGoat/Goat.html
@@ -10,7 +10,7 @@
 
 <body>
     <a href="../index.html">Back</a>
-    <h1>Build the Goat</h1>
+    <h1 id="title">Build the Goat</h1>
     <div >
         <h2 id="player" >Player : </h2>
         <button onclick="GeneratePlayer()">Generate Player</button>
@@ -23,24 +23,23 @@
             <button onclick="selectAttribute('Rebounding')">Rebounding</button>
             <button onclick="selectAttribute('Playmaking')">Playmaking</button>
             <button onclick="selectAttribute('Handles')">Handles</button>
-
     </div>
 
     <div>
         <h2>YourAttributes</h2>
     <div id="yourAttributes">
-        <h3 id="Shooting">Shooting:</h3>
-        <h3 id="Finishing">Finishing:</h3>
-        <h3 id="Defense">Defense:</h3>
-        <h3 id="Body">Body:</h3>
-        <h3 id="Athleticism">Athleticism:</h3>
-        <h3 id="Rebounding">Rebounding:</h3>
-        <h3 id="Playmaking">Playmaking:</h3>
-        <h3 id="Handles">Handles:</h3>
+        <h3 id="Shooting">Shooting :</h3>
+        <h3 id="Finishing">Finishing :</h3>
+        <h3 id="Defense">Defense :</h3>
+        <h3 id="Body">Body :</h3>
+        <h3 id="Athleticism">Athleticism :</h3>
+        <h3 id="Rebounding">Rebounding :</h3>
+        <h3 id="Playmaking">Playmaking :</h3>
+        <h3 id="Handles">Handles :</h3>
     </div>
 
     <h2 id="GoatRank"> Goat Rank :</h2>
-    <h2 id="Averages"> Averages: </h2>
+    <h2 id="Averages"> Averages :</h2>
     <button onclick="reset()">Reset</button>
 
     
